--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=5.6.0",
-    "illuminate/support": "~5.1",
+    "illuminate/support": "~5.1|^8.0",
     "league/oauth2-client": "2.3.*",
     "microsoft/microsoft-graph": "1.0.*"
   },
