--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php": ">=5.6.0",
     "illuminate/support": "~5.1|^8.0",
     "league/oauth2-client": "2.3.*",
-    "microsoft/microsoft-graph": "1.*"
+    "microsoft/microsoft-graph": "^1.25"
   },
   "autoload": {
     "psr-4": {
