--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "php": ">=5.6.0",
     "illuminate/support": "~5.1|^8.0",
-    "league/oauth2-client": "2.3.*"
+    "league/oauth2-client": "2.3.*",
+    "microsoft/microsoft-graph": "1.*"
   },
   "autoload": {
     "psr-4": {
